--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,39 @@ body {
     grid-row: 1;
     grid-column: 1 / 3;
     background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
 }
 
 #slength{
     grid-row: 2 / 3;
     grid-column: 1;
     background-color: blue;
+    display: grid;
+    grid-row: 33% 33% 33%;
+    grid-column: 50% 50%;
+}
+
+#session-label{
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+}
+
+#session-length{
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
+}
+
+#session-increment{
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+}
+
+#session-decrement{
+    grid-row: 3/ 4;
+    grid-column: 3 / 4;
 }
 
 #blength{
