--- a/src/index.css
+++ b/src/index.css
@@ -4,30 +4,33 @@ body {
 
 #container{
     width: 40vw;
-    height: 70vh;
+    height: 75vh;
     margin-top: 10vh;
     margin-left: auto;
     margin-right: auto;
     display: grid;
     grid-template-rows: 20% 40% 40%;
     grid-template-columns: 50% 50%;
-    background-color: black;
+    border: 3px solid #ada4a3;
+    border-radius: 5%;
+    background-color:#eaffde;
+    box-shadow: 4px 6px black;
+    padding: 1%;
 }
 
 #main-title{
-    grid-row: 1;
+    grid-row: 1 / 2;
     grid-column: 1 / 3;
-    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    font-size: 3em;
+    font-weight: bold;
 }
 
 #slength{
     grid-row: 2 / 3;
-    grid-column: 1;
-    background-color: blue;
+    grid-column: 1 / 2;
     display: grid;
     grid-row: 33% 33% 33%;
     grid-column: 50% 50%;
@@ -35,33 +38,129 @@ body {
 
 #session-label{
     grid-row: 1 / 2;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #session-length{
     grid-row: 2 / 3;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #session-increment{
     grid-row: 3 / 4;
     grid-column: 1 / 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 5%;
 }
 
 #session-decrement{
-    grid-row: 3/ 4;
-    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 5%;
 }
 
 #blength{
     grid-row: 2 / 3;
-    grid-column: 2;
-    background-color: green;
+    grid-column: 2 / 3;
+    display: grid;
+    grid-row: 33% 33% 33%;
+    grid-column: 50% 50%;
+
+}
+
+#break-label{
+    font-size: 2em;
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#break-length{
+    font-size: 2em;
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#break-increment{
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 5%;
+}
+
+#break-decrement{
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 5%;
 }
 
 #controls-div{
     grid-row: 3;
     grid-column: 1 / 3;
-    background-color: yellow;
+    display: grid;
+    grid-template-rows: 30% 35% 35%;
+    grid-template-columns: 50% 50%;
 }
+
+#timer-label{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#time-left{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#start_stop{
+    grid-row: 3;
+    grid-column: 1 / 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 5%;
+
+}
+
+#reset{
+    grid-row: 3;
+    grid-column: 2;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 5%;
+}
+
+
 
